--- a/app/src/main/res/layout/fragment_edit_task.xml
+++ b/app/src/main/res/layout/fragment_edit_task.xml
@@ -71,21 +71,23 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_button"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/button_with"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:padding="10dp"
-            android:text="@string/add_task"
+            android:text="@string/delete_task"
             app:layout_constraintEnd_toEndOf="@id/task_note"
             app:layout_constraintTop_toBottomOf="@id/task_note" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/is_done_button"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/button_with"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            android:gravity="center"
             android:padding="10dp"
-            android:text="@string/done"
+            android:text="@string/done_label"
             app:layout_constraintEnd_toStartOf="@id/delete_button"
             app:layout_constraintTop_toTopOf="@id/delete_button" />
 
