--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="item_margin">20dp</dimen>
     <dimen name="item_top_margin">10dp</dimen>
+    <dimen name="button_with">80dp</dimen>
 </resources>
